// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/BreadCrumbs Bread Crumbs One Steps 1`] = `null`;

exports[`Storyshots Components/BreadCrumbs Bread Crumbs Two Steps 1`] = `
<div
  aria-label="breadcrumbs"
  className="breadcrumb "
>
  <ul>
    <li>
      <a
        href="/item1"
      >
        Item 1
      </a>
    </li>
    <li
      className="is-active"
    >
      <a
        href="/item1/item2"
      >
        Current Item
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Button Black Button 1`] = `
<button
  className="button"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Danger Button 1`] = `
<button
  className="button  is-danger"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Dark Button 1`] = `
<button
  className="button  is-dark"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Disabled Button 1`] = `
<button
  className="button  is-primary"
  disabled={true}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Full Button 1`] = `
<button
  className="button  is-primary  is-fullwidth"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Info Button 1`] = `
<button
  className="button  is-info"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Inverted Button 1`] = `
<button
  className="button  is-primary    is-inverted"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Large Button 1`] = `
<button
  className="button  is-primary is-large"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Light Button 1`] = `
<button
  className="button  is-light"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Link Button 1`] = `
<button
  className="button  is-link"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Medium Button 1`] = `
<button
  className="button  is-primary is-medium"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Outlined Button 1`] = `
<button
  className="button  is-primary   is-outlined"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Primary Button 1`] = `
<button
  className="button  is-primary"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Rounded Button 1`] = `
<button
  className="button  is-primary     is-rounded"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Small Button 1`] = `
<button
  className="button  is-primary is-small"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Success Button 1`] = `
<button
  className="button  is-success"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Text Button 1`] = `
<button
  className="button  is-text"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Warning Button 1`] = `
<button
  className="button  is-warning"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button White Button 1`] = `
<button
  className="button  is-white"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/NotificationMessage Danger Light Notification 1`] = `
<div
  className="notification is-danger is-light"
>
  <button
    className="delete"
  />
  <p>
    Ex laborum ex elit occaecat eiusmod nulla amet aute sit laborum. Eu in adipisicing voluptate do minim ex ullamco. Id irure Lorem aliquip veniam ullamco laboris Lorem non ipsum ad veniam. Adipisicing dolore pariatur quis est minim est.
  </p>
</div>
`;

exports[`Storyshots Components/NotificationMessage Danger Notification 1`] = `
<div
  className="notification is-danger"
>
  <button
    className="delete"
  />
  <p>
    Ex laborum ex elit occaecat eiusmod nulla amet aute sit laborum. Eu in adipisicing voluptate do minim ex ullamco. Id irure Lorem aliquip veniam ullamco laboris Lorem non ipsum ad veniam. Adipisicing dolore pariatur quis est minim est.
  </p>
</div>
`;

exports[`Storyshots Components/NotificationMessage Info Light Notification 1`] = `
<div
  className="notification is-info is-light"
>
  <button
    className="delete"
  />
  <p>
    Ex laborum ex elit occaecat eiusmod nulla amet aute sit laborum. Eu in adipisicing voluptate do minim ex ullamco. Id irure Lorem aliquip veniam ullamco laboris Lorem non ipsum ad veniam. Adipisicing dolore pariatur quis est minim est.
  </p>
</div>
`;

exports[`Storyshots Components/NotificationMessage Info Notification 1`] = `
<div
  className="notification is-info"
>
  <button
    className="delete"
  />
  <p>
    Ex laborum ex elit occaecat eiusmod nulla amet aute sit laborum. Eu in adipisicing voluptate do minim ex ullamco. Id irure Lorem aliquip veniam ullamco laboris Lorem non ipsum ad veniam. Adipisicing dolore pariatur quis est minim est.
  </p>
</div>
`;

exports[`Storyshots Components/NotificationMessage Link Light Notification 1`] = `
<div
  className="notification is-link is-light"
>
  <button
    className="delete"
  />
  <p>
    Ex laborum ex elit occaecat eiusmod nulla amet aute sit laborum. Eu in adipisicing voluptate do minim ex ullamco. Id irure Lorem aliquip veniam ullamco laboris Lorem non ipsum ad veniam. Adipisicing dolore pariatur quis est minim est.
  </p>
</div>
`;

exports[`Storyshots Components/NotificationMessage Link Notification 1`] = `
<div
  className="notification is-link"
>
  <button
    className="delete"
  />
  <p>
    Ex laborum ex elit occaecat eiusmod nulla amet aute sit laborum. Eu in adipisicing voluptate do minim ex ullamco. Id irure Lorem aliquip veniam ullamco laboris Lorem non ipsum ad veniam. Adipisicing dolore pariatur quis est minim est.
  </p>
</div>
`;

exports[`Storyshots Components/NotificationMessage Primary Light Notification 1`] = `
<div
  className="notification is-primary is-light"
>
  <button
    className="delete"
  />
  <p>
    Ex laborum ex elit occaecat eiusmod nulla amet aute sit laborum. Eu in adipisicing voluptate do minim ex ullamco. Id irure Lorem aliquip veniam ullamco laboris Lorem non ipsum ad veniam. Adipisicing dolore pariatur quis est minim est.
  </p>
</div>
`;

exports[`Storyshots Components/NotificationMessage Primary Notification 1`] = `
<div
  className="notification is-primary"
>
  <button
    className="delete"
  />
  <p>
    Ex laborum ex elit occaecat eiusmod nulla amet aute sit laborum. Eu in adipisicing voluptate do minim ex ullamco. Id irure Lorem aliquip veniam ullamco laboris Lorem non ipsum ad veniam. Adipisicing dolore pariatur quis est minim est.
  </p>
</div>
`;

exports[`Storyshots Components/NotificationMessage Success Light Notification 1`] = `
<div
  className="notification is-success is-light"
>
  <button
    className="delete"
  />
  <p>
    Ex laborum ex elit occaecat eiusmod nulla amet aute sit laborum. Eu in adipisicing voluptate do minim ex ullamco. Id irure Lorem aliquip veniam ullamco laboris Lorem non ipsum ad veniam. Adipisicing dolore pariatur quis est minim est.
  </p>
</div>
`;

exports[`Storyshots Components/NotificationMessage Success Notification 1`] = `
<div
  className="notification is-success"
>
  <button
    className="delete"
  />
  <p>
    Ex laborum ex elit occaecat eiusmod nulla amet aute sit laborum. Eu in adipisicing voluptate do minim ex ullamco. Id irure Lorem aliquip veniam ullamco laboris Lorem non ipsum ad veniam. Adipisicing dolore pariatur quis est minim est.
  </p>
</div>
`;

exports[`Storyshots Components/NotificationMessage Warning Light Notification 1`] = `
<div
  className="notification is-warning is-light"
>
  <button
    className="delete"
  />
  <p>
    Ex laborum ex elit occaecat eiusmod nulla amet aute sit laborum. Eu in adipisicing voluptate do minim ex ullamco. Id irure Lorem aliquip veniam ullamco laboris Lorem non ipsum ad veniam. Adipisicing dolore pariatur quis est minim est.
  </p>
</div>
`;

exports[`Storyshots Components/NotificationMessage Warning Notification 1`] = `
<div
  className="notification is-warning"
>
  <button
    className="delete"
  />
  <p>
    Ex laborum ex elit occaecat eiusmod nulla amet aute sit laborum. Eu in adipisicing voluptate do minim ex ullamco. Id irure Lorem aliquip veniam ullamco laboris Lorem non ipsum ad veniam. Adipisicing dolore pariatur quis est minim est.
  </p>
</div>
`;

exports[`Storyshots Components/Posts/PostTable Post Table Empty 1`] = `
<table
  className="table is-striped is-hoverable is-fullwidth is-bordered is-narrow"
>
  <thead>
    <tr>
      <th>
        Network
      </th>
      <th>
        Message
      </th>
      <th>
        Scheduled
      </th>
      <th>
        Posted
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colSpan="5"
        rowSpan="1"
      >
        <span
          className="has-text-centered"
        >
          No data to show.
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Components/Posts/PostTable Post Table Items 1`] = `
<table
  className="table is-striped is-hoverable is-fullwidth is-bordered is-narrow"
>
  <thead>
    <tr>
      <th>
        Network
      </th>
      <th>
        Message
      </th>
      <th>
        Scheduled
      </th>
      <th>
        Posted
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <span
          className="icon "
        >
          <i
            className="fab fa-linkedin-in"
          />
        </span>
      </td>
      <td>
        <p
          className="is-ellipsed"
        >
          Commodo laborum elit magna in cillum proident.
        </p>
      </td>
      <td>
        <p>
          <span>
            03 Mar 2020
          </span>
          <span>
            13:11:17
          </span>
        </p>
      </td>
      <td>
        <span
          className="tag is-info"
        >
          Scheduled
        </span>
      </td>
      <td>
        <p
          className="buttons "
        >
          <button
            className="button  is-danger"
            disabled={false}
            onClick={[Function]}
            title="Cancel Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-power-off"
              />
            </span>
          </button>
          <button
            className="button  is-info"
            disabled={false}
            onClick={[Function]}
            title="Edit Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-edit"
              />
            </span>
          </button>
          <button
            className="button  is-success"
            disabled={false}
            onClick={[Function]}
            title="Manually Share now"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-share"
              />
            </span>
          </button>
        </p>
      </td>
    </tr>
    <tr>
      <td>
        <span
          className="icon "
        >
          <i
            className="fab fa-linkedin-in"
          />
        </span>
      </td>
      <td>
        <p
          className="is-ellipsed"
        >
          Minim aliqua excepteur commodo elit dolore in. Proident sint ut cillum laborum eiusmod ea enim quis sunt deserunt magna.
        </p>
      </td>
      <td>
        <p>
          <span>
            17 Dec 2021
          </span>
          <span>
            05:12:30
          </span>
        </p>
      </td>
      <td>
        <span
          className="tag is-success"
        >
          Posted
        </span>
      </td>
      <td>
        <p
          className="buttons "
        >
          <button
            className="button  is-danger"
            disabled={true}
            onClick={[Function]}
            title="Cancel Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-power-off"
              />
            </span>
          </button>
          <button
            className="button  is-info"
            disabled={true}
            onClick={[Function]}
            title="Edit Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-edit"
              />
            </span>
          </button>
          <button
            className="button  is-success"
            disabled={true}
            onClick={[Function]}
            title="Manually Share now"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-share"
              />
            </span>
          </button>
        </p>
      </td>
    </tr>
    <tr>
      <td>
        <span
          className="icon "
        >
          <i
            className="fab fa-linkedin-in"
          />
        </span>
      </td>
      <td>
        <p
          className="is-ellipsed"
        >
          Quis commodo officia cupidatat non velit veniam tempor deserunt.
        </p>
      </td>
      <td>
        <p>
          <span>
            13 Jun 2021
          </span>
          <span>
            01:10:08
          </span>
        </p>
      </td>
      <td>
        <span
          className="tag is-warning"
        >
          Cancelled
        </span>
      </td>
      <td>
        <p
          className="buttons "
        >
          <button
            className="button  is-danger"
            disabled={true}
            onClick={[Function]}
            title="Cancel Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-power-off"
              />
            </span>
          </button>
          <button
            className="button  is-info"
            disabled={false}
            onClick={[Function]}
            title="Edit Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-edit"
              />
            </span>
          </button>
          <button
            className="button  is-success"
            disabled={false}
            onClick={[Function]}
            title="Manually Share now"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-share"
              />
            </span>
          </button>
        </p>
      </td>
    </tr>
    <tr>
      <td>
        <span
          className="icon "
        >
          <i
            className="fab fa-linkedin-in"
          />
        </span>
      </td>
      <td>
        <p
          className="is-ellipsed"
        >
          Adipisicing aliquip est commodo officia anim.
        </p>
      </td>
      <td>
        <p>
          <span>
            11 Jan 2022
          </span>
          <span>
            03:11:10
          </span>
        </p>
      </td>
      <td>
        <span
          className="tag is-light"
        >
          Draft
        </span>
      </td>
      <td>
        <p
          className="buttons "
        >
          <button
            className="button  is-danger"
            disabled={false}
            onClick={[Function]}
            title="Delete Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-trash-alt"
              />
            </span>
          </button>
          <button
            className="button  is-info"
            disabled={false}
            onClick={[Function]}
            title="Edit Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-edit"
              />
            </span>
          </button>
          <button
            className="button  is-success"
            disabled={false}
            onClick={[Function]}
            title="Manually Share now"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-share"
              />
            </span>
          </button>
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Components/Posts/PostTable Post Table Loading 1`] = `
<table
  className="table is-striped is-hoverable is-fullwidth is-bordered is-narrow"
>
  <thead>
    <tr>
      <th>
        Network
      </th>
      <th>
        Message
      </th>
      <th>
        Scheduled
      </th>
      <th>
        Posted
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colSpan="5"
        rowSpan="1"
      >
        <div
          className="level"
        >
          <div
            className="level-item"
          >
            <div
              className="lds-ring is-medium"
            >
              <div />
              <div />
              <div />
              <div />
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Components/Posts/PostTableItem Post Table Item Cancelled 1`] = `
<table
  className="table  is-striped is-hoverable is-fullwidth is-bordered is-narrow"
>
  <tbody>
    <tr>
      <td>
        <span
          className="icon "
        >
          <i
            className="fab fa-linkedin-in"
          />
        </span>
      </td>
      <td>
        <p
          className="is-ellipsed"
        >
          Do proident aute aliquip officia officia laboris aliquip anim officia et.
        </p>
      </td>
      <td>
        <p>
          <span>
            09 Nov 2020
          </span>
          <span>
            13:11:17
          </span>
        </p>
      </td>
      <td>
        <span
          className="tag is-warning"
        >
          Cancelled
        </span>
      </td>
      <td>
        <p
          className="buttons "
        >
          <button
            className="button  is-danger"
            disabled={true}
            title="Cancel Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-power-off"
              />
            </span>
          </button>
          <button
            className="button  is-info"
            disabled={false}
            title="Edit Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-edit"
              />
            </span>
          </button>
          <button
            className="button  is-success"
            disabled={false}
            title="Manually Share now"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-share"
              />
            </span>
          </button>
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Components/Posts/PostTableItem Post Table Item Draft 1`] = `
<table
  className="table  is-striped is-hoverable is-fullwidth is-bordered is-narrow"
>
  <tbody>
    <tr>
      <td>
        <span
          className="icon "
        >
          <i
            className="fab fa-linkedin-in"
          />
        </span>
      </td>
      <td>
        <p
          className="is-ellipsed"
        >
          Aute occaecat aliquip do pariatur voluptate reprehenderit duis.
        </p>
      </td>
      <td>
        <p>
          <span>
            09 Nov 2020
          </span>
          <span>
            13:11:17
          </span>
        </p>
      </td>
      <td>
        <span
          className="tag is-light"
        >
          Draft
        </span>
      </td>
      <td>
        <p
          className="buttons "
        >
          <button
            className="button  is-danger"
            disabled={false}
            title="Delete Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-trash-alt"
              />
            </span>
          </button>
          <button
            className="button  is-info"
            disabled={false}
            title="Edit Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-edit"
              />
            </span>
          </button>
          <button
            className="button  is-success"
            disabled={false}
            title="Manually Share now"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-share"
              />
            </span>
          </button>
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Components/Posts/PostTableItem Post Table Item Posted 1`] = `
<table
  className="table  is-striped is-hoverable is-fullwidth is-bordered is-narrow"
>
  <tbody>
    <tr>
      <td>
        <span
          className="icon "
        >
          <i
            className="fab fa-linkedin-in"
          />
        </span>
      </td>
      <td>
        <p
          className="is-ellipsed"
        >
          Cupidatat elit minim dolore Lorem est sit.
        </p>
      </td>
      <td>
        <p>
          <span>
            03 Mar 2020
          </span>
          <span>
            13:11:17
          </span>
        </p>
      </td>
      <td>
        <span
          className="tag is-success"
        >
          Posted
        </span>
      </td>
      <td>
        <p
          className="buttons "
        >
          <button
            className="button  is-danger"
            disabled={true}
            title="Cancel Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-power-off"
              />
            </span>
          </button>
          <button
            className="button  is-info"
            disabled={true}
            title="Edit Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-edit"
              />
            </span>
          </button>
          <button
            className="button  is-success"
            disabled={true}
            title="Manually Share now"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-share"
              />
            </span>
          </button>
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Components/Posts/PostTableItem Post Table Item Scheduled 1`] = `
<table
  className="table  is-striped is-hoverable is-fullwidth is-bordered is-narrow"
>
  <tbody>
    <tr>
      <td>
        <span
          className="icon "
        >
          <i
            className="fab fa-linkedin-in"
          />
        </span>
      </td>
      <td>
        <p
          className="is-ellipsed"
        >
          Deserunt et do mollit ad et aliqua ipsum adipisicing dolor.
        </p>
      </td>
      <td>
        <p>
          <span>
            03 Mar 2020
          </span>
          <span>
            13:11:17
          </span>
        </p>
      </td>
      <td>
        <span
          className="tag is-info"
        >
          Scheduled
        </span>
      </td>
      <td>
        <p
          className="buttons "
        >
          <button
            className="button  is-danger"
            disabled={false}
            title="Cancel Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-power-off"
              />
            </span>
          </button>
          <button
            className="button  is-info"
            disabled={false}
            title="Edit Post"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-edit"
              />
            </span>
          </button>
          <button
            className="button  is-success"
            disabled={false}
            title="Manually Share now"
          >
            <span
              className="icon is-small"
            >
              <i
                className="fas fa-share"
              />
            </span>
          </button>
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Components/SpinningLoader Spinning Loader Item 1`] = `
<div
  className="lds-ring is-medium"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;
